crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__d417_google_missing_args_section.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D417 Missing argument description in the docstring for `hello`: `name`
 --> D417_missing_args_section.py:1:5
  |
1 | def hello(name):
  |     ^^^^^
2 |     """Do something.
  |
